syntax = "proto3";

package pbcrypto;

message AggregateSignature {
  bytes sig = 1;
  repeated string participants = 2;
}